--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
-  {
+{
   "name": "MedicTrip",
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
   "keywords": [],
-
   "engines": {
-      "node": "6.11.4",
-      "npm": "3.10.10"
-    },
+    "node": "6.11.4",
+    "npm": "3.10.10"
+  },
   "dependencies": {
     "ejs": "2.3.4",
     "grunt": "1.0.1",
@@ -28,10 +27,9 @@
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
     "sails-mysql": "^0.11.5",
+    "sails-postgresql": "^0.11.4",
     "typescript": "^2.6.1"
   },
-  
-
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js"
